--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Leadiify"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:replace="icon, label">
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
@@ -24,5 +25,4 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-
 </manifest>
