--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,15 @@ dependencies {
     //Charts
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    //State Progress bar
+    implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
+    //COil
+    //coilImageLibrary
+    implementation("io.coil-kt:coil:2.2.0")
+
+    //Retrofit Dependencies
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
